fixed modal overlay on small screens

--- a/src/components/Modal-order/Modal.module.css
+++ b/src/components/Modal-order/Modal.module.css
@@ -84,3 +84,11 @@
   opacity: 1;
   transition: opacity 200ms ease-in-out;
 }
+
+@media (max-width: 500px) {
+  .overlay {
+    position: absolute;
+    place-items: start;
+    top: 0;
+  }
+}
